--- a/cv.tex
+++ b/cv.tex
@@ -21,29 +21,21 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Alesya Huzik} % Your name
-\address{Sydney, Australia} % Your address
-\address{+61~427~990-909 \\ me@aguzik.net} % Your phone number and email
-
+\address{Surry Hills, NSW 2010, Australia} % Your address
+\address{+61~427~990-909 \\ mail@alesya.me} % Your phone number and email
+% Your address
 \begin{document}
 
 %----------------------------------------------------------------------------------------
 %   EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Education}
-
-{\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em July 2013} \\ 
-Faculty of Computer Systems and Networks \\
-M.S. in Computer Science \& Software Engineering \smallskip \\
-{\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em July 2012} \\ 
-Faculty of Computer Systems and Networks \\
-B.S. in Systems Engineering \\
-
-\end{rSection}
-
-\begin{rSection}{Certification}
-
-{\bf CO0401EN } Beyond the Basics: Istio and IBM Cloud Kubernetes Service \hfill {\em December 2019} \\
+\begin{rSection}{Highlights}
+{\bf 8.5 years} of working with {\bf Clojure} \hfill {\em since May 2015} \\
+{\bf 14 years} of commercial software development experience \hfill {\em since February 2011} \\
+Have experience working in technical leadership roles (including {\bf Software Architect}, {\bf Team Lead}, and {\bf Lead developer} roles). \\
+{\bf Master of Science} degree in {\bf Computer Science \& Software Engineering} \hfill {\em July 2013} \\ 
+{\bf Bachelor of Science} degree in {\bf Systems Engineering} \hfill {\em July 2012} \\
 
 \end{rSection}
 
@@ -53,32 +45,36 @@ B.S. in Systems Engineering \\
 
 \begin{rSection}{Have experience with}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Operating Systems     & Linux (NixOS, Archlinux, Debian, CentOS, Ubuntu), \\
-                      & Mac OS X, Windows (3.11 -- 11), DOS \smallskip \\
-Programming Languages & Clojure, Ruby, C, Nushell, POSIX shell (bash, zsh), \\
-                      & JavaScript, Common Lisp, Vala, Erlang, Rakudo, Perl, \\
-                      & Maude, Factor, Lua, Terra, C++, Python, Golang and some others \smallskip \\
-Libraries and Frameworks & React, Reagent, core.async, malli, \\
-                      & clojure.spec (+v2), prismatic/schema, \\
-                      & jdbc.next, component, mount-lite, mount, Compojure, Kioo, Enlive
-                      % & Rails, Sinatra, Bootstrap, Material UI
-                      \smallskip \\
-Markup and Typesetting & \LaTeX, HTML, Haml, Slim, CSS, SASS/SCSS, Less, Bootstrap \smallskip \\
-Cloud                 & AWS (EC2, S3, IAM, RDS, DynamoDB, Route 53, EKS, ECS), \\
-                      & DigitalOcean, Cloudflare, Vultr, Linode, Heroku \smallskip \\
-Linux, DevOps, system & Docker/podman, docker-compose, Kubernetes, \\
-administration, networking & Terraform, Consul, Chef, libvirtd (kvm, libvirt-lxc), dokku, \\
-                      & Nginx, Apache httpd, statsd, Postfix, Prosody, vsftpd, Squid, \\
-                      & Corosync, Pacemaker, DRBD \smallskip \\
-Nix-based technologies & NixOS, nix flakes, Colmena, NixOps \smallskip \\
-SQL Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
-NoSQL Databases & Redis, Datomic, DynamoDB, Neo4j, OrientDB, MongoDB, Cassandra \smallskip \\
+\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} p{11cm} }
+Programming Languages & Clojure (8.5 years), Ruby (5 years),
+                        JavaScript (over a decade here and there), TypeScript, C, Golang, Nushell, POSIX shell (bash, zsh), Python, Perl, Lua, C++, Erlang, Common Lisp, Vala, Rakudo, Factor, and some others
+                        \smallskip \\
+Operating Systems     & Linux (NixOS, Archlinux, Debian, CentOS,                                Ubuntu), Mac OS X, Windows (3.11 -- 11), DOS                            \smallskip \\
+Libraries and Frameworks & React, Reagent, core.async, malli,
+                           clojure.spec (+v2), prismatic/schema, jdbc.next, lib-noir, compojure, component, mount-lite, mount, Compojure, Kioo, Enlive, Rails, Sinatra, Bootstrap, Material UI
+                           \smallskip \\
+Cloud   & AWS (Cloudformation, Elastic Beanstalk, EC2,
+          S3, IAM, RDS, DynamoDB, Route 53, EKS, ECS), DigitalOcean, 
+          Cloudflare, Vultr, Nextcloud
+          \smallskip \\
+Linux, DevOps, networking &
+     Docker/Podman, Docker Compose, Kubernetes, Terraform, Consul, Chef, libvirtd (kvm, libvirt-lxc), dokku, Nginx, Apache httpd, statsd, Postfix, Prosody, vsftpd, Squid, Corosync, Pacemaker, DRBD \smallskip \\
+Markup and Typesetting & \LaTeX, HTML, Haml, Slim, CSS, SASS/SCSS,
+                         Less, Bootstrap
+                         \smallskip \\
+Nix-based technologies & NixOS, nix flakes, Colmena, NixOps
+                         \smallskip \\
+SQL Databases & PostgreSQL, MySQL/MariaDB, SQLite
+                \smallskip \\
+NoSQL Databases & Redis, Datomic, DynamoDB, Neo4j,
+                  OrientDB, MongoDB, Cassandra \smallskip \\
 % Tools & zsh, git, emacs, vim, tmux, gpicker, ctags, the silver searcher, \\
 %       & GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
-Programming paradigms & Imperative, Object-oriented (class-based, prototype-based), \\
-                      & Functional, Concatenative (stack-based), Logical (predicate logic, \\
-                      & rewriting logic).
+Programming paradigms & Imperative, Object-oriented (class-based,
+                        prototype-based), Functional, Concatenative (stack-based), Logical (predicate logic, rewriting logic). \smallskip \\
+Generative AI   & OpenAI model APIs, Anthropic Claude API,
+                  Local LLMs (Ollama)
+                  \smallskip \\
 \end{tabular}
 
 \end{rSection}
@@ -89,40 +85,57 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSection}{Work positions}
 
+\begin{rSubsection}{Payreq}{3 June 2024 - Present}{Principal Software Engineer}{Sydney, Australia} % 4 months
+
+\item {\it (not disclosed due presently working there)}
+% \item Updated the main app from Java 8 to Java 21, including dependencies, migrating from Tomcat-based
+%   Elastic Beanstalk deployment to pure Java Elastic Beanstalk, updating bitbucket pipelines, updating
+%   Cloudformation templates and migrating from Apache to NGINX reverse proxy.
+% \item Rebased our peppol network service on top of upstream version of phase4 and made it possible to
+%   update easier next time (it was forked without preserving available history, and there were around 200 commits
+%   to upstream since the fork and around 200 commits on our side since).
+~
+\end{rSubsection}
+
 \begin{rSubsection}{CIM}{25 September 2023 - 15 January 2024}{Senior Software Engineer}{Sydney, Australia} % 3.5 months
-\item Wrote a parser for a new meter data format
-\item Reworked parser resolution from "magic" `requiring-resolve`-based to explicit one, so various clojure
-    tools would see a proper namespace dependency tree and not a bunch of dead code namespaces.
 \item Lead the effort to migrate our internal SDK to use AWS SDK for Java v2, so we can migrate from JDK 11 to JDK 21.
     Updated the SDK, tests, and a few core services to use it.
+\item Wrote a parser for a new meter data format
+\item Reworked parser resolution from "magic" `requiring-resolve`-based to explicit one, so various Clojure
+    tools would see a proper namespace dependency tree and not a bunch of dead code namespaces.
 ~
 \end{rSubsection}
 
 \begin{rSubsection}{Audience Republic}{February 2023 - 31 July 2023}{Software Architect}{Sydney, Australia} % 5 months
-\item Designed linear-space short urls for SMS. When the number of SMS messages we were sending started to grow, generation of
-    unique short urls (for tracking purposes) became a bottleneck. Originally what it'd do is it'd try to insert a random string
-    of a specified length into the database and if that fails due a collision it'd retry up to 10 times. We couldn't generate
-    them in bulk because a collision inside a batch would make the entire insert to fail. Moreover if sending a batch would fail
-    we would waste those urls. The solution I came up with was to use a linear space for short urls and separate allocation and
-    use of short urls, using a format-preserving encryption algorithm to make allocated short urls look random. The background task
-    would keep a large number (about 1 million) of preallocated urls available for use, and any task that needed short urls could
-    just take however many it needs via `select ... limit ? for update skip locked`, so tasks can take them concurrently, and if
-    a task fails it's transaction would rollback releasing those short urls back into the pool.
-\item switched all production servers from manual long-term ssl certificates to Let's Encrypt wildcard certificates with automatic
+\item Redesigned URL shortening for SMS by defining a linear space for them and using format-preserving encryption.
+  This addressed the bottleneck in unique short URL generation for escalating SMS volumes and enabled concurrent URL
+  allocation without collision issues by being able to maintain a pool of ~1 million preallocated URLs for efficient,
+  fail-safe usage.
+%\item Designed linear-space short urls for SMS. When the number of SMS messages we were sending started to grow, generation of
+%    unique short urls (for tracking purposes) became a bottleneck. Originally what it'd do is it'd try to insert a random string
+%    of a specified length into the database and if that fails due a collision it'd retry up to 10 times. We couldn't generate
+%    them in bulk because a collision inside a batch would make the entire insert to fail. Moreover if sending a batch would fail
+%    we would waste those urls. The solution I came up with was to use a linear space for short urls and separate allocation and
+%    use of short urls, using a format-preserving encryption algorithm to make allocated short urls look random. The background task
+%    would keep a large number (about 1 million) of preallocated urls available for use, and any task that needed short urls could
+%    just take however many it needs via `select ... limit ? for update skip locked`, so tasks can take them concurrently, and if
+%    a task fails it's transaction would rollback releasing those short urls back into the pool.
+\item switched all production servers from manual long-term SSL certificates to Let's Encrypt wildcard certificates with automatic
     refresh and sync across servers 
-\item Designed and bult a campaign bot that allows to simulate user activity, with time travel, for an arbitrary number of users on
-    campaigns made for demo and sales purposes. This allows the sales team, when going to a potential customer, to create campaigns
-    that mimic what that company would have and populate it with reasonable-looking user activity, so they can see stats, graphs with
-    activity distributions (sharing via social media etc.), referral registration percentages spanning days and months etc.
-\item Most of the project test coverage was in a form of integration tests (many of which were point-and-click browser recordings).
-    While it did cover a substantial portion of functionality we had no idea what is actually covered. I hacked a code coverage library
-    (cloverage) into the project in a way that allows it to keep track of all the code being ran when coverage tracking is enabled
-    (it's only enabled on the server used as a target of those integration tests), so we can extract coverage data from this live
-    server after running tests
-\item While working on the automation project I created a dsl wrapper around our resource dsl that was significantly more readable.
+\item Designed and built a campaign bot that allows to simulate user activity, with time travel, for an arbitrary number of users on
+    campaigns made for demo and sales purposes. This allows the sales team to create campaigns that mimic what that company would
+    have and populate it with reasonable-looking user activity, so potential customers can see stats, graphs with activity
+    distributions (sharing via social media etc.), referral registration percentages spanning days and months etc.
+\item Embedded a code coverage library (cloverage) into the backend server request-handling code (non-production environment only),
+    enabling direct code coverage measurement from UI-driven integration tests (which was the majority in our test suite).
+    This approach revealed precise backend code paths activated during live interactions, significantly enhancing the precision and
+    relevance of our test coverage analysis.
+\item While working on the automation project I created a DSL wrapper
+    around our resource DSL that was significantly more readable.
     Once other engineers discovered it they asked for it to be moved into the core of the project as a primary interface for working
     with db entities, which we gladly did.
-\item Automation: new frontiers - search-based triggers. Automation became a popular part of the platform for customers but they wanted
+\item Automation: new frontiers - search-based triggers. Automation became
+    a popular part of the platform for customers, but they wanted
     to have an ability to trigger certain actions once a user starts or stops to match certain criteria (the platform already had very
     involved functionality for building multistage filters and saving them as segments). I designed and implemented search-based triggers
     in a way that was performant and didn't affect the rest of the platform. This was crucial since tables used for filters are the
@@ -131,7 +144,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 ~
 \end{rSubsection}
 
-\begin{rSubsection}{Audience Republic}{April 2021 - February 2023}{Team Lead}{Sydney, Australia} % 1 year 10 months (22 months)
+\begin{rSubsection}{Audience Republic}{July 2021 - February 2023}{Team Lead}{Sydney, Australia} % 1 year 7 months (19 months)
 \item Leading the team working on the Automation project from inception to production release and beyond
 \item Sourcing, interviewing, hiring candidates for the automation team
 \item Training and mentoring new hires
@@ -142,34 +155,47 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 \item Work estimation, planning, tracking team progress
 \item Monitoring team health with 1-on-1 meetings, negotiating team needs with CTO and CEO (introducing
     paid leave and public holidays for engineers working remotely as contractors)
-\item CNAME project (allowing customers to use customer-titled subdomains for their campains)
-\item Wave (company's long shot experiment) -- a mobile app for one-to-many communications of artists/promoters
-    with their fans. I designed the backend with quick prototyping and future scaling in mind (messaging
-    backend was based on the Matrix protocol and Synapse was used as a messaging backend) and setup all
-    necessary infrastructure. My team (plus a contractor mobile developer) built it. The project was released
-    on Google Play and Apple AppStore, but was quickly deprioritised due lack of adoption.
-\item Migrated the project from an abandoned postgres.async sql driver to standard jdbc (and jdbc.next clojure library).
-    Wrote tools to find all sql queries that rely on positional parameter numbers (postgres.async uses \$1, \$2 to refer
-    to parameters, so unlike with jdbc they can be reused in a query), rewrote queries, added a shim layer that allowed
-    both sql backends to coexist by transparently translating old-style queries into the new style as long as all parameters
+\item CNAME project (allowing customers to use customer-titled subdomains for their campaigns)
+\item Wave (company's long shot experiment) -- a mobile app for one-to-many
+    communications of artists/promoters
+    with their fans. I designed the backend with quick prototyping and future
+    scaling in mind (messaging
+    backend was based on the Matrix protocol and Synapse was used as a
+    messaging backend) and setup all necessary infrastructure. My team (plus
+    a contractor mobile developer) built it. The project was released
+    on Google Play and Apple AppStore, but was quickly deprioritised due 
+    lack of adoption.
+\item Migrated the project from an abandoned postgres.async SQL driver to standard JDBC (and jdbc.next clojure library).
+    Wrote tools to find all SQL queries that rely on positional parameter numbers (postgres.async uses \$1, \$2 to refer
+    to parameters, so unlike with JDBC they can be reused in a query), rewrote queries, added a shim layer that allowed
+    both SQL backends to coexist by transparently translating old-style queries into the new style as long as all parameters
     are used in the query and are in a sequential order.
 ~
 \end{rSubsection}
 
-\begin{rSubsection}{Audience Republic}{January 2021 - April 2021}{Senior Backend Developer}{Sydney, Australia} % 4 months
-\item Designed Automation subsystem of the product. It's a custom visual programming language for promoters to describe
-    workflows that trigger in response to ceartain fan actions. E.g. "when fan purchases a ticket to this event we want
-    to add a tag to that fan, send them an email, wait until event date, send another email with an event reminder" etc.
+\begin{rSubsection}{Audience Republic}{January 2021 - July 2021}{Senior Backend Developer}{Sydney, Australia} % 7 months
+\item Designed Automation subsystem of the product. It's a custom visual
+    programming language for promoters to describe
+    workflows that trigger in response to certain fan actions. E.g. "when fan 
+    purchases a ticket to this event we want to add a tag to that fan,
+    send them an email, wait until event date, send another email with an
+    event reminder" etc.
 \item Participated in sourcing, interviewing, hiring candidates
-\item Found a solution to a scaling issue related to generation of tracking links when sending emails 
-\item Designed a solution to scale integrations synchronisation without collisions %(select for update skip locked?)
-\item Introduced database migrations via migratus library. Previously db changes were
-    just written as sql text in release notes and were only made by the CTO
-\item When I joined the project had 2 "app" repositories and one "shared library" repository. This was leading to very
-    complicated and slow process when "library" code was touched both during development and release processes (especially
-    given the team was really small). I merged all 3 repositories in a way that preserved all the history of all three of
-    them, so we ended up with a single clojure project having multiple main namespaces and ability to still have `git blame`
-    for every piece of the source code. Iteration became much easier and we never looked back.
+\item Found a solution to a scaling issue related to generation of tracking
+      links when sending emails 
+\item Designed a solution to scale integrations synchronisation without
+      collisions %(select for update skip locked?)
+\item Introduced database migrations via migratus library. Previously
+    db changes were just written as SQL text in release notes and were only made by the CTO
+\item When I joined the project had 2 "app" repositories and one "shared
+    library" repository. This was leading to very complicated and slow
+    process when "library" code was touched both during development and
+    release processes (especially given the team was really small). I merged
+    all 3 repositories in a way that preserved all the history of all three
+    of them, so we ended up with a single Clojure project having multiple
+    main namespaces and ability to still have `git blame` for every piece of
+    the source code. Iteration became much easier and we never looked back.
+\item Formed a team around me that ended up working on the automation project
 ~
 \end{rSubsection}
 
@@ -297,25 +323,24 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 %   NOTES SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Some facts to better understand what kind of person I am}
+\begin{rSection}{Random facts about me}
   \smallskip
   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
   \item I decided to tie my work to computers when I was 5
   \item First program in BASIC at age of 11, first HTML and JavaScript at 12, first program in Pascal at 13
   \item I started playing with Linux when I was 14 (it was Mandrake 10 in 2005)
-  \item I use Dvorak keyboard layout
-  \item I use NixOS, and maintain a few packages in it. Before NixOS I used to use Archlinux
-  \item For many years I used to use tiling window managers and a very minimalistic desktop setup. I switched to Gnome Shell just over a year ago though
+  % \item I use Dvorak keyboard layout
+  % \item I use NixOS, and maintain a few packages in it. Before NixOS I used to use Archlinux
+  % \item For many years I used to use tiling window managers and a very minimalistic desktop setup. Few years ago I learned GNOME internals and switched to it.
   % \item I tend to automate everything I could
-  \item I use Emacs since 2010. Since 2011 I use it with Evil (vim emulation layer)
-  \item I have dozens of personal opensource projects and have contributed to
-        upstream of at least 20 other
+  % \item I use Emacs since 2010. Since 2011 I use it with Evil (vim emulation layer)
+  \item I have dozens of personal open source projects and have contributed to at least 20 other
   % \item Some time ago I was passionate about japanese animation, so I learned
   %       some japanese and passed an international exam (JLPT4 certificate). I remember myself
   %       learning Esperanto and Toki Pona, and now I am learning Lojban
   % \item I am an active ACM and ACM SIGPLAN member
-  \item One of my primary interests is expressivity of programming languages. I hope to study it as a PhD student one day
+%  \item One of my primary interests is expressivity of programming languages. I hope to study it as a PhD student one day
   % \item I write tests very rarely and when I feel I wish to write one, I know that
   %   I should search for more simple solution that will be obviously working and not
   %   require any iterative validation. I do not believe that writing tons
@@ -329,17 +354,17 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 %   INTERESTS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Growth directions}
+\begin{rSection}{Interests and growth directions}
   \smallskip
   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
-  \item Statistics and Machine Learning
-  \item Semantics of programming languages
+  \item Machine Learning and LLMs (I have some personal projects utilising them)
+  % \item Semantics of programming languages
   % \item Programming languages with a minimalistic syntax: Lisp (Clojure, Common Lisp, Scheme,
   %       Qi/Shen), FORTH, Factor, APL, Tcl, Refal, Rebol, Smalltalk
   % \item Rewriting logic (Maude system in particular)
   \item Programming music (Overtone, Extempore) and visuals (Quil, Processing, Fluxus)
-  \item Creating electronic music
+  \item Electronic music production
   % \item Learning to draw
   % \item Neuroscience
   \end{list}
@@ -348,3 +373,4 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 %----------------------------------------------------------------------------------------
 
 \end{document}
+
